--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "intl-messageformat": "10.7.16",
     "next": "15.3.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/node": "22.15.3",
