--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.3.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
