--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "@heroui/react": "^2.7.11",
     "@react-aria/ssr": "3.9.9",
     "@tanstack/react-query": "^5.83.0",
+    "dnd-kit-sortable-tree": "^0.1.73",
     "framer-motion": "11.13.1",
     "next": "15.3.1",
     "react": "18.3.1",
