Update Initial form

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
     "cSpell.words": [
         "unmood",
+        "ایجاد",
         "تعداد",
         "حداکثر",
         "سفارش",
         "قابل",
-        "محدودیت"
+        "کیلوگرم",
+        "محدودیت",
+        "محصول"
     ]
 }
