--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-select": "^5.10.2",
     "use-debounce": "^10.0.6"
   },
   "devDependencies": {
