--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@heroui/react": "^2.7.11",
+    "@hookform/resolvers": "^5.2.2",
     "@react-aria/ssr": "3.9.9",
     "@tanstack/react-query": "^5.83.0",
     "@tinymce/tinymce-react": "^6.3.0",
@@ -16,10 +17,12 @@
     "next": "15.3.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-select": "^5.10.2",
-    "use-debounce": "^10.0.6"
+    "use-debounce": "^10.0.6",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "22.15.3",
