--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-select": "^5.10.2",
+    "recharts": "^3.3.0",
     "use-debounce": "^10.0.6",
     "zod": "^4.1.12"
   },
