--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@tanstack/react-query": "^5.83.0",
     "@tinymce/tinymce-react": "^6.3.0",
     "framer-motion": "11.13.1",
-    "next": "15.3.1",
+    "next": "^15.5.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.65.0",
